Changed field order in package.json
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/jsonc.yml
+++ b/src/rules/jsonc.yml
@@ -16,10 +16,10 @@ rules:
     - version
     pathPattern: ^$
     order:
-  - - private
+    - name
     - version
     - type
-    - name
+    - private
     - description
     - keywords
     - author
@@ -28,20 +28,20 @@ rules:
     - funding
     - license
     - repository
+    - scripts
+    - wireit
     - dependencies
     - peerDependencies
     - peerDependenciesMeta
     - optionalDependencies
     - bundledDependencies
     - devDependencies
-    - scripts
-    - wireit
-    - os
-    - cpu
-    - engines
     - order:
         type: asc
         natural: true
+    - os
+    - cpu
+    - engines
   - hasProperties:
     - type
     - name
