Added more fields for package.json sorting
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/jsonc.yml
+++ b/src/rules/jsonc.yml
@@ -28,6 +28,9 @@ rules:
     - funding
     - license
     - repository
+    - main
+    - exports
+    - bin
     - scripts
     - wireit
     - dependencies
