Changed type assertion style to `as` in `consistent-type-assertions` rule
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -8,7 +8,7 @@ rules:
   consistent-indexed-object-style: WARN # https://typescript-eslint.io/rules/consistent-indexed-object-style
   consistent-type-assertions: # https://typescript-eslint.io/rules/consistent-type-assertions
   - WARN
-  - assertionStyle: angle-bracket
+  - assertionStyle: as
     objectLiteralTypeAssertions: allow
   consistent-type-exports: WARN # https://typescript-eslint.io/rules/consistent-type-exports
   consistent-type-imports: # https://typescript-eslint.io/rules/consistent-type-imports
