Added rule prefer-reduce-type-parameter to typescript.yml
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/typescript.yml
+++ b/src/rules/typescript.yml
@@ -22,6 +22,7 @@ rules:
   no-unsafe-unary-minus: WARN # https://typescript-eslint.io/rules/no-unsafe-unary-minus
   prefer-includes: WARN # https://typescript-eslint.io/rules/prefer-includes
   prefer-optional-chain: WARN # https://typescript-eslint.io/rules/prefer-optional-chain
+  prefer-reduce-type-parameter: WARN # https://typescript-eslint.io/rules/prefer-reduce-type-parameter
   prefer-string-starts-ends-with: WARN # https://typescript-eslint.io/rules/prefer-string-starts-ends-with
   prefer-ts-expect-error: WARN # https://typescript-eslint.io/rules/prefer-ts-expect-error
   unbound-method: # https://typescript-eslint.io/rules/unbound-method
