Added rule `restrict-template-expressions` to TypeScript rules
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/src/rules/typescript.yml
+++ b/src/rules/typescript.yml
@@ -25,6 +25,7 @@ rules:
   prefer-reduce-type-parameter: WARN # https://typescript-eslint.io/rules/prefer-reduce-type-parameter
   prefer-string-starts-ends-with: WARN # https://typescript-eslint.io/rules/prefer-string-starts-ends-with
   prefer-ts-expect-error: WARN # https://typescript-eslint.io/rules/prefer-ts-expect-error
+  restrict-template-expressions: WARN # https://typescript-eslint.io/rules/restrict-template-expressions
   unbound-method: # https://typescript-eslint.io/rules/unbound-method
   - WARN
   - ignoreStatic: true
