--- a/src/rules/perfectionist.yml
+++ b/src/rules/perfectionist.yml
@@ -30,14 +30,16 @@ rules:
     - - parent-type # import type { Options } from '../foo.js'
       - sibling-type # import type { Options } from './foo.js'
       - external-type # import type { Options } from 'foo'
-      - internal-type # import type { Options } from 'lib/foo.js'
+      - - internal-type # import type { Options } from '~/lib/foo.js'
+        - internalWithShortcut-type # import type { Options } from 'lib/foo.js'
       - index-type # import type { Options } from './index.d.ts'
     - side-effect # import 'foo'
     - object # import log = console.log
     - - builtin # import fs from 'fs'
       - node # import fs from 'node:fs'
     - external # import foo from 'foo'
-    - internal # import foo from '~/lib/foo.js'
+    - - internal # import foo from '~/lib/foo.js'
+      - internalWithShortcut # import foo from 'lib/foo.js'
     - - parent # import { foo } from '../foo.js'
       - siblings # import { foo } from './foo.js'
     - style # import style from './style.css'
@@ -45,6 +47,13 @@ rules:
     custom-groups:
       value:
         node: node:*
+        internalWithShortcut: &internalWithShortcut
+          - src/**
+          - lib/**
+          - component/**
+          - components/**
+      type:
+        internalWithShortcut-type: *internalWithShortcut
   sort-interfaces: # https://eslint-plugin-perfectionist.azat.io/rules/sort-interfaces
   - WARN
   - type: natural
