--- a/src/rules/perfectionist.yml
+++ b/src/rules/perfectionist.yml
@@ -30,7 +30,7 @@ rules:
     - - parent-type # import type { Options } from '../foo.js'
       - sibling-type # import type { Options } from './foo.js'
       - external-type # import type { Options } from 'foo'
-      - - internal-type # import type { Options } from '~/lib/foo.js'
+      - - internal-type # import type { Options } from 'lib/foo.js'
         - internalWithShortcut-type # import type { Options } from 'lib/foo.js'
       - index-type # import type { Options } from './index.d.ts'
     - side-effect # import 'foo'
@@ -38,7 +38,7 @@ rules:
     - - builtin # import fs from 'fs'
       - node # import fs from 'node:fs'
     - external # import foo from 'foo'
-    - - internal # import foo from '~/lib/foo.js'
+    - - internal # import foo from 'lib/foo.js'
       - internalWithShortcut # import foo from 'lib/foo.js'
     - - parent # import { foo } from '../foo.js'
       - siblings # import { foo } from './foo.js'
