--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "eslint-plugin-regexp": "^2.3.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "eslint-plugin-yml": "^1.13.1",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0"
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "forward-slash-path": "^0.3.0"
   },
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
