--- a/package.json
+++ b/package.json
@@ -60,19 +60,17 @@
   },
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
-    "babel-preset-jaid": "17.0.0",
+    "@types/node": "^20.12.7",
     "chalk": "^5.3.0",
-    "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "emp": "^2.0.0",
-    "eslint-config-jaid": "^8.24.0",
+    "eslint-config-jaid": "^8.25.0",
     "eslint-find-rules": "^4.1.0",
     "filter-obj": "^6.0.0",
     "foreach-cli": "^1.8.1",
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "immer": "^10.0.4",
-    "jest": "^29.7.0",
     "jest-light-runner": "^0.6.0",
     "js-yaml": "^4.1.0",
     "list-dir-content-size": "^0.0.5",
@@ -81,11 +79,15 @@
     "pretty-bytes": "^6.1.1",
     "publishimo": "^5.0.6",
     "read-file-yaml": "^2.0.0",
+    "rollup-config-factory": "^0.3.0",
     "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
     "tsconfig-jaid-node": "^8.1.0",
     "tsx": "^4.7.2",
     "type-fest": "^4.15.0",
-    "yaml": "^2.4.1"
+    "typescript": "^5.4.5",
+    "wireit": "^0.14.4",
+    "yaml": "^2.4.1",
+    "zeug": "^1.0.0"
   }
 }
