--- a/package.json
+++ b/package.json
@@ -31,12 +31,19 @@
     "url": "https://github.com/jaid/eslint-config-jaid"
   },
   "scripts": {
-    "build": "tsx src/build.ts",
-    "release": "npm run build && find out/package -mindepth 1 -maxdepth 1 -type d -exec sh -c 'cd {} && npm publish' \\;",
+    "build": "node node_modules/rollup/dist/bin/rollup --config",
+    "build:production": "NODE_ENV=production npm run build",
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
-    "test": "node --import tsx --test test/index.ts"
+    "inspectConfig": "npx @eslint/config-inspector --config src/index.ts",
+    "release": "npm run build && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
+    "release:winddows": "npm run build && pwsh -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\"",
+    "test": "node --import tsx --test test/index.ts",
+    "tsc": "tsc"
   },
   "dependencies": {
+    "@stylistic/eslint-plugin-js": "^1.7.2",
+    "@stylistic/eslint-plugin-jsx": "^1.7.2",
+    "@stylistic/eslint-plugin-ts": "^1.7.2",
     "@types/eslint": "^8.56.10",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
@@ -56,13 +63,16 @@
     "eslint-plugin-yml": "^1.14.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.14.0",
     "forward-slash-path": "^0.3.0",
-    "jsonc-eslint-parser": "^2.4.0"
+    "jsonc-eslint-parser": "^2.4.0",
+    "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
+    "@eslint/config-inspector": "^0.4.6",
     "@types/node": "^20.12.7",
     "chalk": "^5.3.0",
     "debug": "^4.3.4",
+    "dts-bundle-generator": "^9.5.1",
     "emp": "^2.0.0",
     "eslint-config-jaid": "^8.25.0",
     "eslint-find-rules": "^4.1.0",
