--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build:production": "NODE_ENV=production npm run build",
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
     "inspectConfig": "npx @eslint/config-inspector --config src/index.ts",
-    "release": "npm run build && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
-    "release:winddows": "npm run build && pwsh -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\"",
+    "release": "npm run build:production && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
+    "release:windows": "npm run build:production && pwsh -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\"",
     "test": "node --import tsx --test test/index.ts",
     "tsc": "tsc"
   },
