Fixed stylistic configuration
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@stylistic/eslint-plugin": "^1.7.2",
     "@stylistic/eslint-plugin-js": "^1.7.2",
     "@stylistic/eslint-plugin-jsx": "^1.7.2",
     "@stylistic/eslint-plugin-ts": "^1.7.2",
