Added blocking issue comment
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "scripts": {
     "build": "node node_modules/rollup/dist/bin/rollup --config",
-    "build:production": "NODE_ENV=production npm run build",
+    "build-production": "NODE_ENV=production npm run build",
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
     "inspectConfig": "npx @eslint/config-inspector --config src/index.ts",
     "printConfig": "eslint --print-config src/index.ts",
     "release": "npm run build:production && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
-    "release:windows": "npm run build:production && pwsh -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\"",
+    "release-windows": "powershell -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish `$_.DirectoryName }\"",
     "test": "exit 0",
     "tsc": "tsc"
   },
