Force-upgraded @typescript-eslint packages
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@stylistic/eslint-plugin-jsx": "^1.8.0",
     "@stylistic/eslint-plugin-ts": "^1.8.0",
     "@types/eslint": "^8.56.10",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.10",
+    "@typescript-eslint/parser": "^8.0.0-alpha.10",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-node": "^0.3.9",
