--- a/package.json
+++ b/package.json
@@ -61,15 +61,13 @@
   },
   "dependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0-alpha.10",
-    "@typescript-eslint/parser": "^8.0.0-alpha.10",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.11",
+    "@typescript-eslint/parser": "8.0.0-alpha.11",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.2.0",
-    "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-jsonc": "^2.15.1",
-    "eslint-plugin-n": "^17.6.0",
+    "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-regexp": "^2.5.0",
     "eslint-plugin-unicorn": "^53.0.0",
@@ -82,13 +80,11 @@
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
     "@eslint/config-inspector": "^0.4.8",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "chalk": "^5.3.0",
     "debug": "^4.3.4",
     "dts-bundle-generator": "^9.5.1",
     "emp": "^2.0.0",
-    "eslint-config-jaid": "^9.0.1",
-    "eslint-find-rules": "^4.1.0",
     "filter-obj": "^6.0.0",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.1",
@@ -110,5 +106,6 @@
     "typescript": "^5.4.5",
     "wireit": "^0.14.4",
     "zeug": "^1.0.0"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
