--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
   },
   "scripts": {
     "build": "node node_modules/rollup/dist/bin/rollup --config",
-    "build-production": "NODE_ENV=production npm run build",
+    "build:production": "NODE_ENV=production npm run build",
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
     "inspectConfig": "npx @eslint/config-inspector --config src/index.ts",
     "printConfig": "eslint --print-config src/index.ts",
     "release": "npm run build:production && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
-    "release-windows": "wireit",
+    "release:windows": "wireit",
     "test": "wireit",
     "tsc": "tsc"
   },
   "wireit": {
-    "release-windows": {
+    "release:windows": {
       "command": "powershell -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\""
     },
     "test": {
@@ -61,8 +61,8 @@
   },
   "dependencies": {
     "@stylistic/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.11",
-    "@typescript-eslint/parser": "8.0.0-alpha.11",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.12",
+    "@typescript-eslint/parser": "8.0.0-alpha.12",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.2.0",
     "eslint-plugin-import-quotes": "^0.0.1",
@@ -97,7 +97,8 @@
     "pretty-bytes": "^6.1.1",
     "publishimo": "^5.0.6",
     "read-file-yaml": "^2.0.0",
-    "rollup-config-factory": "^0.3.0",
+    "rollup": "^4.17.2",
+    "rollup-config-factory": "^0.4.1",
     "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
     "tsconfig-jaid-node": "^8.1.0",
@@ -105,7 +106,7 @@
     "type-fest": "^4.18.2",
     "typescript": "^5.4.5",
     "wireit": "^0.14.4",
-    "zeug": "^1.0.0"
+    "zeug": "^1.0.1"
   },
   "packageManager": "yarn@4.2.2"
 }
