--- a/package.json
+++ b/package.json
@@ -60,15 +60,16 @@
     }
   },
   "dependencies": {
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.30",
-    "@typescript-eslint/parser": "8.0.0-alpha.30",
+    "@stylistic/eslint-plugin": "^2.6.0-beta.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.41",
+    "@typescript-eslint/parser": "8.0.0-alpha.41",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.7.0",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-n": "^17.9.0",
     "eslint-plugin-perfectionist": "^2.11.0",
+    "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-unicorn": "^54.0.0",
     "eslint-plugin-yml": "^1.14.0",
@@ -108,5 +109,5 @@
     "wireit": "^0.14.5",
     "zeug": "^2.0.0"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.3.1"
 }
