Added essential dependency eslint-config-jaid

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "debug": "^4.3.5",
     "dts-bundle-generator": "^9.5.1",
     "emp": "^2.0.0",
+    "eslint-config-jaid": "^11.0.0",
     "filter-obj": "^6.1.0",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.2",
