--- a/.editorconfig
+++ b/.editorconfig
@@ -8,11 +8,5 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
-trim_trailing_whitespace = false
-
-[*.txt]
-trim_trailing_whitespace = false
-
-[*.hbs]
+[*.{md,hbs,txt}]
 trim_trailing_whitespace = false
