--- a/etc/suppressed_in_error_lens.yml
+++ b/etc/suppressed_in_error_lens.yml
@@ -11,6 +11,7 @@ rules:
     - space-in-parens
     - space-infix-ops
     - type-annotation-spacing
+    - no-unnecessary-template-expression
   import:
     - newline-after-import
   importQuotes:
