--- a/package.json
+++ b/package.json
@@ -60,16 +60,16 @@
     }
   },
   "dependencies": {
-    "@stylistic/eslint-plugin": "^2.6.0-beta.1",
-    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.58",
-    "@typescript-eslint/parser": "8.0.0-alpha.58",
+    "@stylistic/eslint-plugin": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "8.0.1",
+    "@typescript-eslint/parser": "8.0.1",
     "browserslist-config-jaid-node": "3.0.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-jsonc": "^2.16.0",
-    "eslint-plugin-n": "^17.10.1",
-    "eslint-plugin-perfectionist": "^3.0.0",
-    "eslint-plugin-promise": "^7.0.0",
+    "eslint-plugin-n": "^17.10.2",
+    "eslint-plugin-perfectionist": "^3.1.3",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-yml": "^1.14.0",
@@ -81,12 +81,12 @@
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
     "@eslint/config-inspector": "^0.5.2",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.2.0",
     "chalk": "^5.3.0",
     "debug": "^4.3.6",
     "dts-bundle-generator": "^9.5.1",
     "emp": "^2.0.0",
-    "eslint-config-jaid": "^11.1.0",
+    "eslint-config-jaid": "^11.2.0",
     "filter-obj": "^6.1.0",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.2",
@@ -99,15 +99,15 @@
     "pretty-bytes": "^6.1.1",
     "publishimo": "^5.0.6",
     "read-file-yaml": "^2.0.0",
-    "rollup": "^4.19.1",
+    "rollup": "^4.20.0",
     "rollup-config-factory": "^0.4.1",
     "showdown": "^2.1.0",
     "sort-keys": "^5.0.0",
     "tsconfig-jaid-node": "^8.1.0",
-    "tsx": "^4.16.2",
-    "type-fest": "^4.23.0",
+    "tsx": "^4.17.0",
+    "type-fest": "^4.24.0",
     "typescript": "^5.5.4",
-    "wireit": "^0.14.5",
+    "wireit": "^0.14.7",
     "zeug": "^2.0.0"
   },
   "packageManager": "yarn@4.3.1"
