Added new suppressed rule "dot-notation" to the "suppressed_in_error_lens.yml" file
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/etc/suppressed_in_error_lens.yml
+++ b/etc/suppressed_in_error_lens.yml
@@ -12,6 +12,7 @@ rules:
     - space-infix-ops
     - type-annotation-spacing
     - no-unnecessary-template-expression
+    - dot-notation
   import:
     - newline-after-import
   importQuotes:
