Added more error lens suppressions
Signed-off-by: Jaid <6216144+Jaid@users.noreply.github.com>

--- a/etc/suppressed_in_error_lens.yml
+++ b/etc/suppressed_in_error_lens.yml
@@ -29,6 +29,11 @@ rules:
     - imports
   unicorn:
     - prefer-node-protocol
+    - escape-case
+    - prefer-string-slice
+  regex:
+    - sort-character-class-elements
+    - sort-flags
 aliases:
   - from: eslint
     to: typescript
