--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.10.0",
     "eslint-plugin-import-quotes": "^0.0.1",
+    "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-n": "^17.10.2",
     "eslint-plugin-perfectionist": "^3.6.0",
