--- a/etc/suppressed_in_error_lens.yml
+++ b/etc/suppressed_in_error_lens.yml
@@ -1,7 +1,16 @@
 rules:
   eslint:
+    - dot-notation
+    - no-duplicate-type-constituents
+    - no-else-return
+    - no-extra-non-null-assertion
+    - no-unnecessary-template-expression
     - no-unnecessary-type-arguments
     - no-unused-vars
+    - no-useless-rename
+    - object-shorthand
+    - operator-assignment
+    - prefer-destructuring
     - prefer-template
     - quote-props
     - quotes
@@ -11,8 +20,8 @@ rules:
     - space-in-parens
     - space-infix-ops
     - type-annotation-spacing
-    - no-unnecessary-template-expression
-    - dot-notation
+    - no-wrapper-object-types
+    - prefer-function-type
   import:
     - newline-after-import
   importQuotes:
@@ -31,9 +40,22 @@ rules:
     - prefer-node-protocol
     - escape-case
     - prefer-string-slice
+    - template-indent
+    - switch-case-braces
+    - prevent-abbreviations
+    - prefer-query-selector
+    - prefer-object-from-entries
+    - prefer-modern-dom-apis
+    - prefer-includes
+    - prefer-default-parameters
+    - prefer-array-some
+    - no-console-spaces
+    - no-for-loop
   regex:
     - sort-character-class-elements
     - sort-flags
+    - no-useless-string-literal
+    - no-useless-escape
 aliases:
   - from: eslint
     to: typescript
