--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@typescript-eslint/parser": "8.7.0",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.11.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-import-x": "^4.3.0",
     "eslint-plugin-jsonc": "^2.16.0",
