--- a/etc/suppressed_in_error_lens.yml
+++ b/etc/suppressed_in_error_lens.yml
@@ -51,6 +51,7 @@ rules:
     - prefer-array-some
     - no-console-spaces
     - no-for-loop
+    - consistent-existence-index-check
   regex:
     - sort-character-class-elements
     - sort-flags
