--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
     "inspectConfig": "wireit",
     "printConfig": "eslint --print-config src/index.ts",
-    "release": "npm run build:production && fd --unrestricted --full-path 'dist/package/.+/production/package.json' --exec bash -c 'npm publish {//}'",
+    "release": "fd --unrestricted --full-path 'dist[\\\\/]package[\\\\/][\\w-]+[\\\\/]production[\\\\/]package.json' --exec bun publish --cwd {//}",
     "release:windows": "wireit",
     "test": "wireit",
     "tsc": "tsc"
