--- a/package.json
+++ b/package.json
@@ -31,43 +31,21 @@
     "url": "https://github.com/jaid/eslint-config-jaid"
   },
   "scripts": {
-    "build": "node node_modules/rollup/dist/bin/rollup --config",
+    "build": "bun x rollup --config",
     "build:production": "NODE_ENV=production npm run build",
-    "buildPage": "fse emptyDir dist/page && tsx src/scripts/activeHtml.ts && tsx src/scripts/unusedHtml.ts && tsx src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
-    "inspectConfig": "wireit",
+    "buildPage": "fse emptyDir dist/page && bun src/scripts/activeHtml.ts && bun src/scripts/unusedHtml.ts && bun src/scripts/deprecatedHtml.ts && fse copy etc/page dist/page",
+    "inspectConfig": "bun x @eslint/config-inspector --config src/index.ts",
     "printConfig": "eslint --print-config src/index.ts",
     "release": "fd --unrestricted --full-path 'dist[\\\\/]package[\\\\/][\\w-]+[\\\\/]production[\\\\/]package.json' --exec bun publish --cwd {//}",
-    "release:windows": "wireit",
-    "test": "wireit",
+    "test": "bun test ./test",
     "tsc": "tsc"
-  },
-  "wireit": {
-    "inspectConfig": {
-      "command": "tsx node_modules/@eslint/config-inspector/bin.mjs --config src/index.ts"
-    },
-    "release:windows": {
-      "command": "powershell -Command \"Get-ChildItem -Path 'dist/package/*/production/package.json' | ForEach-Object { npm publish $_.DirectoryName }\""
-    },
-    "test": {
-      "env": {
-        "NODE_ENV": "test",
-        "MAIN_MODULE": "src/index.ts"
-      },
-      "files": [
-        "src/**/*",
-        "lib/**/*",
-        "test/**/*",
-        "package.json"
-      ],
-      "command": "tsx test/test.ts"
-    }
   },
   "dependencies": {
     "@stylistic/eslint-plugin": "^5.5.0",
     "@typescript-eslint/eslint-plugin": "8.46.2",
     "@typescript-eslint/parser": "8.46.2",
     "browserslist-config-jaid-node": "3.0.0",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-import-x": "^4.16.1",
@@ -86,12 +64,12 @@
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
     "@eslint/config-inspector": "^1.3.0",
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.9.2",
     "chalk": "^5.6.2",
     "debug": "^4.4.3",
     "dts-bundle-generator": "^9.5.1",
     "emp": "^2.0.0",
-    "eslint-config-jaid": "^18.3.0",
+    "eslint-config-jaid": "^18.4.0",
     "filter-obj": "^6.1.0",
     "fs-extra": "^11.3.2",
     "globby": "^15.0.0",
