--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-es-x": "^9.3.0",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsonc": "^2.21.0",
