--- a/package.json
+++ b/package.json
@@ -42,31 +42,31 @@
     "tsc": "bun x tsc"
   },
   "dependencies": {
-    "@stylistic/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/eslint-plugin": "8.52.0",
-    "@typescript-eslint/parser": "8.52.0",
+    "@stylistic/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "8.56.0",
+    "@typescript-eslint/parser": "8.56.0",
     "browserslist-config-jaid-node": "3.0.0",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-jsonc": "^2.21.0",
-    "eslint-plugin-n": "^17.23.1",
-    "eslint-plugin-perfectionist": "^5.3.1",
+    "eslint-plugin-jsonc": "^3.0.0",
+    "eslint-plugin-n": "^17.24.0",
+    "eslint-plugin-perfectionist": "^5.6.0",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-regexp": "^2.10.0",
-    "eslint-plugin-unicorn": "^62.0.0",
-    "eslint-plugin-yml": "^1.19.1",
+    "eslint-plugin-regexp": "^3.0.0",
+    "eslint-plugin-unicorn": "^63.0.0",
+    "eslint-plugin-yml": "^3.2.1",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.14.0",
     "forward-slash-path": "^0.3.0",
-    "jsonc-eslint-parser": "^2.4.2",
-    "lodash-es": "^4.17.22",
-    "yaml-eslint-parser": "^1.3.2"
+    "jsonc-eslint-parser": "^3.1.0",
+    "lodash-es": "^4.17.23",
+    "yaml-eslint-parser": "^2.0.0"
   },
   "devDependencies": {
     "@atao60/fse-cli": "^0.1.9",
     "@eslint/config-inspector": "^1.4.2",
-    "@types/node": "^25.0.6",
+    "@types/node": "^25.3.0",
     "chalk": "^5.6.2",
     "debug": "^4.4.3",
     "dts-bundle-generator": "^9.5.1",
@@ -74,24 +74,23 @@
     "eslint-config-jaid": "^22.1.0",
     "filter-obj": "^6.1.0",
     "fs-extra": "^11.3.3",
-    "globby": "^16.1.0",
+    "globby": "^16.1.1",
     "handlebars": "^4.7.8",
-    "immer": "^11.1.3",
+    "immer": "^11.1.4",
     "js-yaml": "^4.1.1",
     "list-dir-content-size": "^0.0.5",
     "more-types": "^0.6.0",
     "pretty-bytes": "^7.1.0",
     "publishimo": "^5.0.6",
     "read-file-yaml": "^2.0.0",
-    "rollup": "^4.55.1",
+    "rollup": "^4.58.0",
     "rollup-config-factory": "^0.4.2",
     "showdown": "^2.1.0",
     "sort-keys": "^6.0.0",
     "tsconfig-jaid-node": "^10.0.0",
     "tsx": "^4.21.0",
-    "type-fest": "^5.3.1",
+    "type-fest": "^5.4.4",
     "typescript": "^5.9.3",
-    "wireit": "^0.14.12",
-    "zeug": "^2.1.0"
+    "wireit": "^0.14.12"
   }
 }
